syntax = "proto3";

package types;

message Config {
	string title = 1;
	string loglevel = 2;
	string logConsoleLevel = 10;
	string logFile = 9;
	Store store = 3;
	LocalStore localStore = 11;
	Consensus consensus = 4;
	MemPool memPool = 5;
	BlockChain blockChain = 6;
	Wallet wallet = 7;
	P2P p2p = 8;
}

message MemPool {
	int64 poolCacheSize = 1;
	int64 minTxFee = 2;
}

message Consensus {
	string name = 1;
	string genesis = 2;
	bool minerstart = 3;
	int64 genesisBlockTime = 4;
	string hotkeyAddr = 5;
}

message Wallet {
	int64 minFee = 1;
	string driver = 2;
	string dbPath = 3;
}

message Store {
	string driver = 1;
	string dbPath = 2;
}

message LocalStore {
	string driver = 1;
	string dbPath = 2;
}

message BlockChain {
	int64 defCacheSize = 1;
	int64 maxFetchBlockNum = 2;
	int64 timeoutSeconds = 3;
	int64 batchBlockNum = 4;
	string driver = 5;
	string dbPath = 6;
	bool isStrongConsistency = 7;
}

message P2P {
	int32 seedPort = 1;
	string dbPath = 2;
	string grpcLogFile = 3;
	bool isSeed = 4;
	repeated string seeds = 5;
	bool enable = 6;
	int32 msgCacheSize = 7;
	int32 version = 8;
	int32 verMix = 9;
	int32 verMax = 10;
}
